--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
           <target>16</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.0</version>
+      </plugin>
     </plugins>
     <testSourceDirectory>${project.basedir}/Test</testSourceDirectory>
     <sourceDirectory>${project.basedir}</sourceDirectory>
