Finished pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <groupId>groupId</groupId>
   <artifactId>RTS</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <name>RTS</name>
+  <url>https://github.com/BrosinTimeCode/RTS</url>
+
   <build>
     <plugins>
       <plugin>
@@ -22,15 +25,29 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.0</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>1.2.0-M1</version>
+          </dependency>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.1.0</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
     <testSourceDirectory>${project.basedir}/Test</testSourceDirectory>
     <sourceDirectory>${project.basedir}</sourceDirectory>
   </build>
+
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>com.googlecode.lanterna</groupId>
@@ -41,7 +58,8 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.0.0-M5</version>
+      <version>5.1.0</version>
     </dependency>
   </dependencies>
+
 </project>
