--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>groupId</groupId>
-  <artifactId>RTS</artifactId>
+  <groupId>com.brosintime</groupId>
+  <artifactId>Convergent</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>RTS</name>
+  <name>Convergent</name>
   <url>https://github.com/BrosinTimeCode/RTS</url>
 
   <build>
